# ProjectRioStreamHelper

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  PRSH.spec  README.md  TSH.spec  announcements.json  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.claude/: launch.json
.github/workflows/: announce-add.yml  announce-list.yml  announce-remove.yml  build-release.yml
docs/performance/: 01-backend-critical-path.md  02-frontend-react.md  03-action-plan.md
hooks/: runtime_hook_chdir.py
installer/: PRSH.iss
public/: index.html  logo.icns  logo_tray.icns
public/layout/bracket/: index.html  losers_only.html  player_schedule.html  winners_only.html
public/layout/fonts/: README.md
public/layout/lib/: overlay-base.js  rio-data.js
public/layout/msb_teams/: roster1.html  roster2.html  stats1.html  stats2.html  team1logo.html  team2logo.html
public/layout/preview/: bracket_sample.json  scoreboard_sample.json  ticker_sample.json
public/layout/rotator/: ticker.html
public/layout/scenes/: NNL.html  rivalry.html
public/layout/scoreboard1/: roster.html  roster1.html  roster2.html  scoreboard.html  stats.html  stats1.html  stats2.html  team1logo.html  team2logo.html  teamlogo.html
scripts/: build.ps1  build.sh  freeze-version.py
server/: __init__.py  announcements.py  controller_overlay.py  paths.py  port_conflict.py  server.py  settings.py  state.py  tray.py  win_window.py
server/api/: __init__.py
server/api/v1/: announcements.py  assets.py  branding.py  challonge.py  controller.py  game_pool.py  layouts.py  logs.py  rio.py  rotation.py  scoreboards.py  settings.py  startgg.py  state.py  stats.py  update_team.py
server/challonge/: provider.py
server/rio/: game_pool.py  hud_watcher.py  provider.py  rotation.py  stats_api.py  stats_tracker.py
server/rio/pyrio/: characters.py
server/startgg/: provider.py  queries.py
server/utils/: deep_dict.py  json.py  keyring.py  router.py  uvilogger.py
src/: main.jsx
src/components/: App.jsx  LogsViewer.jsx  SettingsModal.jsx  SupportLinks.jsx  WelcomeCard.jsx  fields.jsx  providers.jsx  router.jsx
src/components/scoreboard/: ActiveMatchupStats.jsx  CharacterStatEditor.jsx  CompletedGameInfo.jsx  DiamondPanel.jsx  LiveGameSelector.jsx  PlayerSlot.jsx  RotationControls.jsx  ScoreControls.jsx  TeamPanel.jsx
src/context/: announcements.jsx  socket.jsx  store.jsx
src/data/: msb.js  stadiums.js
src/hooks/: useStartGG.js  useTournament.js
src/lang/: en-US.json  locales.jsx
src/lib/: assets.js
src/routes/: fields.jsx  root.jsx
src/routes/bracket/: bracket.jsx
src/utils/: statCalc.js
user_data/: settings.json
(+12 files in other folders)
